Completed JSONPointer implementation and unit tests.